<resources>
    <string name="app_name">LightHauz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Login">Log in</string>
    <string name="Register">Register</string>
    <string name="Logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="email">E-mail</string>
    <string name="NewPassword">New Password</string>
    <string name="password">Password</string>
    <string name="passwordHint">Password(8-12 characters)</string>
    <string name="Confirmpass">Confirm Password</string>
    <string name="nameHint">Full Name</string>
    <string name="Birthday">Birth Date dd/mm/yyyy</string>
    <string name="signUpQuestion">Haven\'t sign up yet?</string>
    <string name="welcomeToLighthauz">Welcome to LightHauz</string>
    <string name="firstIntro">Since this is your first time using the app, we need your help to tell us your interests.\n\n </string>
    <string name="SetInterest">Set Interest</string>
    <string name="chooseCategoryTip">You can choose more than one category to represent your interests.</string>
    <string name="RequestsReceived">Requests Received</string>
    <string name="RequestsSent">Requests Sent</string>
    <string name="newIdeaInstruction">Step by step add new idea:\n
	1. Add business name, \n
		  background, problem, and\n
		solution\n
	2. Make Business Model Canvas\n
	3. Arrange SWOT</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="insertHere">Insert Here</string>
    <string name="backToLogin">Back to Login</string>
    <string name="getStarted">Get Started</string>
    <string name="Message">Message</string>

    <string name="EmptyField">Field must be filled</string>
    <string name="IdeaDetail">Idea Detail</string>
    <string name="Category">Category</string>
    <string name="CreatedBy">Created By</string>
    <string name="LastEdited">Last Edited</string>
    <string name="Description">Description</string>
    <string name="Problem">Problem</string>
    <string name="IdeaTitle">Idea Title</string>
    <string name="Title">Title</string>
    <string name="Background">Background</string>
    <string name="Solution">Solution</string>
    <string name="ValueProposition">Value Proposition</string>
    <string name="CustomerSegment">Customer Segment</string>
    <string name="CustomerRelationship">Customer Relationship</string>
    <string name="Channel">Channel</string>
    <string name="KeyActivities">Key Activities</string>
    <string name="KeyResources">Key Resources</string>
    <string name="KeyPartner">Key Partner</string>
    <string name="CostStructure">Cost Structure</string>
    <string name="RevenueStream">Revenue Stream</string>
    <string name="Strength">Strengths</string>
    <string name="Weakness">Weaknesses</string>
    <string name="Opportunities">Opportunities</string>
    <string name="Threat">Threats</string>
    <string name="BusinessName">Business Name</string>
    <string name="BusinessCategory">Business Category</string>
    <string name="BusinessDescription">Description</string>
    <string name="addphoto">Add Photo</string>
    <string name="IdeaBackground">The reason why you think your idea is brilliant?</string>
    <string name="IdeaProblem">What problems are solved by your idea?</string>
    <string name="IdeaSolution">How does your Idea solve the problem?</string>
    <string name="BMCInfo">Now it’s time to make your business plan.</string>
    <string name="SWOTInfo">Strengths and weaknesses are often internal to your
                organization, while opportunities and threats generally relate to
                external factors. </string>
    <string name="KnowYourSwot">Know your SWOT</string>
    <string name="report">Report</string>
    <string name="suggestion">Suggestion</string>
    <string name="search">Search</string>
    <string name="addUser">Add User</string>
    <string name="removeUser">Remove User</string>
    <string name="contact">Contact</string>
    <string name="newsFeed">NEWS FEED</string>

    <string name="newsNewIdea">posted a new idea.</string>
    <string name="newsUpdateIdea">updated an idea.</string>


    <string name="showbmc">Show BMC</string>
    <string name="showswot">Show SWOT</string>

<string name="BMCInfo2">Business Model Canvas is a
strategic management and
entrepreneurial tool. It allows you to describe, design, challenge, invent, and pivot your business model.</string>

    <string name="DisplayName">Display Name</string>
    <string name="ViewMore">View More</string>
    <string name="Occupation">Occupation</string>
    <string name="Interest">Interest</string>
    <string name="AboutMe">About Me</string>
    <string name="Connections">Connections</string>
    <string name="Ideas">Ideas</string>
    <string name="MyIdeas">My Ideas</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="Profile">Profile</string>

    <string name="byTitle">by title</string>
    <string name="byCategory">by category</string>
    <string name="noResultsFound">No results found</string>
    <string name="searchGuide">Click on the search icon at the top right corner to start searching</string>
    <string name="EmptyConnection">No connections found</string>
    <string name="EmptyIdea">No ideas found</string>
    <string name="EmptyRequest">You don\'t have any requests</string>
    <string name="EmptyLike">No one has liked this idea</string>
    <string name="EmptyComment">No one has commented on this idea</string>
    <string name="EmptySuggestion">No suggestions available</string>
    <string name="ConfirmRemoveUser">Are you sure want to remove this user from your connection?</string>
    <string name="ConfirmRemoveIdea">Are you sure want to delete this Idea?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Close">Close</string>
    <string name="EmptyCategory">You must choose at least one category</string>
    <string name="EditIdea">Edit Idea</string>
    <string name="DeleteIdea">Delete Idea</string>
    <string name="Save">Save</string>
    <string name="EnterComment">Enter comment</string>

    <string name="StrengthText">What advantages does your organization have?\n\nWhat do you do better than anyone else?\n\nWhat do people in your market see as your strengths?\n\nWhat factors mean that you \"get the sale\"?</string>
    <string name="WeaknessText">What could you improve?\n\nWhat should you avoid?\n\nWhat are people in your market likely to see as weaknesses?\n\nWhat factors lose you sales?</string>
    <string name="OpportunitiesText">What good opportunities can you spot?\n\nWhat interesting trends are you aware of?</string>
    <string name="ThreatText">What obstacles do you face?\n\nWhat are your competitors doing?\n\nCould any of your weaknesses seriously threaten your business?</string>
    <string name="RevenueStreamsText">Represents the cash a company generates from each Customer Segment (costs must be subtracted from revenues to create earnings).\n•	For what value are your customers really willing to pay?\n•	For what do they currently pay?\n•	How are they currently paying?\n•	How would they prefer to pay?\n•	How much does each Revenue Stream contribute to overall revenues?</string>
    <string name="CostStructureText">Describes all costs incurred to operate a business model.\n•	What are the most important costs inherent in your business model?\n•	Which Key Resources are most expensive?\n•	Which Key Activities are most expensive?</string>
    <string name="KeyPartnersText">Describes the network of suppliers and partners that make the business model work.\n•	Who are your Key Partners?\n•	Who are your key suppliers?\n•	Which Key Resources are you acquiring from partners?\n•	Which Key Activities do partners perform?</string>
    <string name="KeyActivitiesText">Describes the most important things a company must do to make its business model work.\nThese are the most important actions a company must take to operate successfully. Like Key Resources, they are required to create and offer a Value Proposition, reach markets, maintain Customer Relationships, and earn revenues. </string>
    <string name="KeyResourcesText">Describes the most important assets required to make a business model work.\nThese resources allow an enterprise to create and offer a Value Proposition, reach markets, maintain relationships with Customer Segments, and earn revenues. </string>
    <string name="CustomerRelationshipText">Describes the types of relationships a company establishes with specific Customer Segments.\n•	What type of relationship does each of your Customer Segments expect you to establish and maintain with them?\n•	Which ones have you established? How costly are they?\n•	How are they integrated with the rest of your business model?</string>
    <string name="ChannelText">Describes how a company communicates with and reaches its Customer Segments to deliver a Value Proposition.\n•	Through which Channels do your Customer Segments want to be reached?\n•	How are you reaching them now?\n•	How are your Channels integrated?\n•	Which ones work best?\n•	Which ones are most cost-efficient? How are you integrating them with customer routines?</string>
    <string name="ValuePropositionText">Describes the bundle of products and services that create value for a specific Customer Segment.\n•	What value do we deliver to the customer?\n•	Which one of our customer\’s problems are we helping to solve? Which customer needs are we satisfying?\n•	What bundles of products and services are we offering to each Customer Segment?</string>
    <string name="CustomerSegmentText">Defines the different groups of people or organizations an enterprise aims to reach and serve.\n•	For whom are you creating value?\n•	Who are your most important customers?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

