<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_report"
        android:text="@string/report"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <TextView
        android:text="@string/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/tv_report_title"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_report"/>

    <EditText
        android:id="@+id/et_report_title"
        android:inputType="text"
        android:hint="@string/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_report_title"/>

    <TextView
        android:text="@string/Message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_report_title"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"
        android:id="@+id/tv_report_message" />

    <EditText
        android:id="@+id/et_report_message"
        android:hint="@string/insertHere"
        android:maxLength="100"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_report_message"/>

    <Button
        android:id="@+id/btn_submit_dialog_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_report_message"
        android:layout_marginTop="16dp"
        android:text="@string/submit"/>


</RelativeLayout>