<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dvidr_000.lighthauzproject.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etEmail"
        android:hint="@string/email"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/tvLogin"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:layout_below="@+id/etEmail"
        android:layout_alignStart="@+id/etEmail"
        android:layout_marginTop="12dp" />

    <Button
        android:text="@string/Login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" />

    <TextView
        android:text="@string/signUpQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvInvite"
        android:layout_below="@+id/btnLogin"
        android:layout_alignStart="@+id/btnLogin"
        android:layout_marginTop="25dp" />

    <TextView
        android:text="@string/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvRegister"
        android:clickable="true"
        android:layout_alignBaseline="@+id/tvInvite"
        android:layout_alignBottom="@+id/tvInvite"
        android:layout_alignEnd="@+id/btnLogin" />

    <TextView
        android:text="@string/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:id="@+id/tvLogin"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/tvRegister"
        android:layout_marginTop="56dp" />



</RelativeLayout>
