<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dvidr_000.lighthauzproject.RegisterActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/etEmailReg"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/etPasswordReg"
        android:hint="@string/password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_below="@+id/etYourname"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp"
        android:id="@+id/etMobileNumber"
        android:hint="@string/InputYourNumber" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="11dp"
        android:id="@+id/etYourname"
        android:hint="@string/InputYourName"
        android:layout_below="@+id/etConfPassword"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="21dp"
        android:id="@+id/etConfPassword"
        android:hint="@string/Confirmpass"
        android:layout_below="@+id/etPasswordReg"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:id="@+id/tvRegister2" />

    <Button
        android:text="Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister"
        android:elevation="0dp"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/warningReg"
        android:layout_above="@+id/btnRegister"
        android:layout_centerHorizontal="true" />

    <EditText
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="38dp"
        android:id="@+id/etEmailReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRegister2"
        android:layout_alignParentStart="true"
        android:hint="@string/email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/Birthday"
        android:ems="10"
        android:id="@+id/etDate"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/etMobileNumber"
        android:layout_alignParentStart="true" />

</RelativeLayout>
