<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.dvidr_000.lighthauzproject.IdeaInfoFragment">

    <Button
        android:text="@string/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btnNextIdeaInfo"
        android:background="@color/white"
        style="@style/Widget.AppCompat.Button.Borderless" />
    <ScrollView
        android:layout_above="@id/btnNextIdeaInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/BusinessName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/tvIdeaInfoBusinessName" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/insertHere"
                android:ems="10"
                android:layout_below="@+id/tvIdeaInfoBusinessName"
                android:layout_alignStart="@+id/tvIdeaInfoBusinessName"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:id="@+id/etIdeaInfoBusinessNameFill" />

            <TextView
                android:text="@string/BusinessCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etIdeaInfoBusinessNameFill"
                android:layout_alignStart="@+id/etIdeaInfoBusinessNameFill"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/tvIdeaInforBusinessCategory" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvIdeaInforBusinessCategory"
                android:layout_alignStart="@+id/tvIdeaInforBusinessCategory"
                android:layout_marginTop="16dp"
                android:id="@+id/etIdeaInforBusinessCategoryFill" />

            <TextView
                android:text="@string/BusinessDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etIdeaInforBusinessCategoryFill"
                android:layout_alignStart="@+id/etIdeaInforBusinessCategoryFill"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/tvIdeaInforBusinessDescription" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/insertHere"
                android:ems="10"
                android:layout_below="@+id/tvIdeaInforBusinessDescription"
                android:layout_alignStart="@+id/tvIdeaInforBusinessDescription"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:id="@+id/etIdeaInfoDescriptionFill" />

            <TextView
                android:text="@string/addphoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etIdeaInfoDescriptionFill"
                android:layout_alignStart="@+id/etIdeaInfoDescriptionFill"
                android:paddingTop="16dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/tvAddPhoto" />

            <ImageButton
                android:layout_width="192dp"
                android:layout_height="192dp"
                app:srcCompat="@drawable/placeholder"
                android:scaleType="fitCenter"
                android:id="@+id/ic_idea_info"
                android:layout_below="@+id/tvAddPhoto"
                android:layout_alignStart="@+id/tvAddPhoto"
                android:layout_marginTop="11dp" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
